@@ -5,7 +5,7 @@ TARGET_LIB = ../lib/libdanzeff.a
 OBJS = danzeff.o
 
 INCDIR =
-CFLAGS = $(GLOBAL_CFLAGS) -G0 -mno-explicit-relocs -Wall -g -DDANZEFF_SDL -DDANZEFF_SCEGU -DDANZEFF_GU_OWNDLIST -DDANZEFF_USE_STD_PSPCTRL_H
+CFLAGS = $(GLOBAL_CFLAGS) -G0 -mno-explicit-relocs -Wall -g -DDANZEFF_SDL -DDANZEFF_SCEGU -DDANZEFF_USE_STD_PSPCTRL_H
 CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 ASFLAGS = $(CFLAGS)
 
